[gd_scene load_steps=10 format=3 uid="uid://beun5pmc4ebq7"]

[ext_resource type="Script" path="res://scripts/basic_drop.gd" id="1_4k8re"]
[ext_resource type="AudioStream" uid="uid://c6eqprquy818q" path="res://sounds/bell_02.ogg" id="2_a7ihc"]
[ext_resource type="Material" uid="uid://cisno0pmc23qp" path="res://materials/highlight-white.material" id="2_ety16"]
[ext_resource type="Material" uid="uid://biq4jlnasw0cj" path="res://materials/amethyst_shine.material" id="2_wctet"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_238ua"]

[sub_resource type="ArrayMesh" id="ArrayMesh_gajvs"]
_surfaces = [{
"aabb": AABB(-0.894425, -1, -0.85064, 1.78885, 2, 1.70128),
"format": 34896613377,
"index_count": 60,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 1, 0, 5, 0, 0, 0, 0, 0, 3, 0, 2, 0, 0, 0, 4, 0, 3, 0, 0, 0, 5, 0, 4, 0, 1, 0, 10, 0, 5, 0, 2, 0, 6, 0, 1, 0, 3, 0, 7, 0, 2, 0, 4, 0, 8, 0, 3, 0, 5, 0, 9, 0, 4, 0, 1, 0, 6, 0, 10, 0, 2, 0, 7, 0, 6, 0, 3, 0, 8, 0, 7, 0, 4, 0, 9, 0, 8, 0, 5, 0, 10, 0, 9, 0, 6, 0, 11, 0, 10, 0, 7, 0, 11, 0, 6, 0, 8, 0, 11, 0, 7, 0, 9, 0, 11, 0, 8, 0, 10, 0, 11, 0, 9, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(255, 127, 0, 0, 255, 127, 0, 0, 140, 231, 193, 70, 26, 207, 0, 0, 114, 88, 193, 70, 255, 255, 0, 0, 0, 0, 193, 70, 255, 127, 0, 0, 114, 88, 193, 70, 0, 0, 0, 0, 140, 231, 193, 70, 228, 48, 0, 0, 140, 167, 61, 185, 255, 255, 0, 0, 114, 24, 61, 185, 26, 207, 0, 0, 114, 24, 61, 185, 228, 48, 0, 0, 140, 167, 61, 185, 0, 0, 0, 0, 255, 255, 61, 185, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_bh2sh"]
resource_name = "magical-crystal_Icosphere"
_surfaces = [{
"aabb": AABB(-0.894425, -1, -0.85064, 1.78885, 2, 1.70128),
"attribute_data": PackedByteArray(139, 46, 255, 255, 162, 139, 255, 255, 22, 93, 255, 255, 185, 232, 255, 255, 45, 186, 255, 255, 209, 69, 175, 215, 209, 69, 175, 215, 209, 69, 175, 215, 209, 69, 175, 215, 209, 69, 175, 215, 69, 23, 175, 215, 69, 23, 175, 215, 69, 23, 175, 215, 255, 255, 175, 215, 255, 255, 175, 215, 115, 209, 175, 215, 115, 209, 175, 215, 115, 209, 175, 215, 115, 209, 175, 215, 115, 209, 175, 215, 232, 162, 175, 215, 232, 162, 175, 215, 232, 162, 175, 215, 232, 162, 175, 215, 232, 162, 175, 215, 92, 116, 175, 215, 92, 116, 175, 215, 92, 116, 175, 215, 92, 116, 175, 215, 92, 116, 175, 215, 139, 46, 96, 175, 139, 46, 96, 175, 139, 46, 96, 175, 139, 46, 96, 175, 139, 46, 96, 175, 0, 0, 96, 175, 0, 0, 96, 175, 185, 232, 96, 175, 185, 232, 96, 175, 185, 232, 96, 175, 45, 186, 96, 175, 45, 186, 96, 175, 45, 186, 96, 175, 45, 186, 96, 175, 45, 186, 96, 175, 162, 139, 96, 175, 162, 139, 96, 175, 162, 139, 96, 175, 162, 139, 96, 175, 162, 139, 96, 175, 22, 93, 96, 175, 22, 93, 96, 175, 22, 93, 96, 175, 22, 93, 96, 175, 22, 93, 96, 175, 209, 69, 17, 135, 92, 116, 17, 135, 69, 23, 17, 135, 232, 162, 17, 135, 115, 209, 17, 135),
"format": 34896613399,
"index_count": 60,
"index_data": PackedByteArray(0, 0, 10, 0, 5, 0, 7, 0, 27, 0, 2, 0, 3, 0, 15, 0, 13, 0, 4, 0, 23, 0, 16, 0, 1, 0, 25, 0, 20, 0, 9, 0, 54, 0, 29, 0, 11, 0, 30, 0, 6, 0, 17, 0, 38, 0, 14, 0, 24, 0, 43, 0, 18, 0, 26, 0, 45, 0, 21, 0, 8, 0, 32, 0, 52, 0, 12, 0, 36, 0, 34, 0, 19, 0, 44, 0, 39, 0, 22, 0, 49, 0, 41, 0, 28, 0, 53, 0, 47, 0, 31, 0, 55, 0, 50, 0, 35, 0, 57, 0, 33, 0, 42, 0, 59, 0, 37, 0, 48, 0, 58, 0, 40, 0, 51, 0, 56, 0, 46, 0),
"material": SubResource("StandardMaterial3D_238ua"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray(255, 127, 0, 0, 255, 127, 101, 167, 255, 127, 0, 0, 255, 127, 136, 244, 255, 127, 0, 0, 255, 127, 13, 200, 255, 127, 0, 0, 255, 127, 156, 180, 255, 127, 0, 0, 255, 127, 216, 221, 140, 231, 193, 70, 26, 207, 101, 167, 140, 231, 193, 70, 26, 207, 233, 142, 140, 231, 193, 70, 26, 207, 13, 200, 140, 231, 193, 70, 26, 207, 25, 167, 140, 231, 193, 70, 26, 207, 91, 192, 114, 88, 193, 70, 255, 255, 101, 167, 114, 88, 193, 70, 255, 255, 233, 142, 114, 88, 193, 70, 255, 255, 233, 142, 114, 88, 193, 70, 255, 255, 156, 180, 114, 88, 193, 70, 255, 255, 25, 167, 0, 0, 193, 70, 255, 127, 156, 180, 0, 0, 193, 70, 255, 127, 216, 221, 0, 0, 193, 70, 255, 127, 25, 167, 0, 0, 193, 70, 255, 127, 200, 217, 0, 0, 193, 70, 255, 127, 91, 192, 114, 88, 193, 70, 0, 0, 136, 244, 114, 88, 193, 70, 0, 0, 65, 243, 114, 88, 193, 70, 0, 0, 65, 243, 114, 88, 193, 70, 0, 0, 216, 221, 114, 88, 193, 70, 0, 0, 200, 217, 140, 231, 193, 70, 228, 48, 136, 244, 140, 231, 193, 70, 228, 48, 65, 243, 140, 231, 193, 70, 228, 48, 13, 200, 140, 231, 193, 70, 228, 48, 200, 217, 140, 231, 193, 70, 228, 48, 91, 192, 140, 167, 61, 185, 255, 255, 233, 142, 140, 167, 61, 185, 255, 255, 156, 180, 140, 167, 61, 185, 255, 255, 25, 167, 140, 167, 61, 185, 255, 255, 101, 167, 140, 167, 61, 185, 255, 255, 233, 142, 114, 24, 61, 185, 26, 207, 101, 167, 114, 24, 61, 185, 26, 207, 233, 142, 114, 24, 61, 185, 26, 207, 13, 200, 114, 24, 61, 185, 26, 207, 25, 167, 114, 24, 61, 185, 26, 207, 91, 192, 114, 24, 61, 185, 228, 48, 136, 244, 114, 24, 61, 185, 228, 48, 65, 243, 114, 24, 61, 185, 228, 48, 13, 200, 114, 24, 61, 185, 228, 48, 200, 217, 114, 24, 61, 185, 228, 48, 91, 192, 140, 167, 61, 185, 0, 0, 65, 243, 140, 167, 61, 185, 0, 0, 216, 221, 140, 167, 61, 185, 0, 0, 200, 217, 140, 167, 61, 185, 0, 0, 136, 244, 140, 167, 61, 185, 0, 0, 65, 243, 255, 255, 61, 185, 255, 127, 156, 180, 255, 255, 61, 185, 255, 127, 216, 221, 255, 255, 61, 185, 255, 127, 25, 167, 255, 255, 61, 185, 255, 127, 200, 217, 255, 255, 61, 185, 255, 127, 91, 192, 255, 127, 255, 255, 255, 127, 156, 180, 255, 127, 255, 255, 255, 127, 216, 221, 255, 127, 255, 255, 255, 127, 101, 167, 255, 127, 255, 255, 255, 127, 136, 244, 255, 127, 255, 255, 255, 127, 13, 200, 111, 41, 69, 100, 160, 121, 157, 46, 45, 96, 164, 63, 236, 51, 153, 205, 74, 73, 135, 237, 111, 41, 69, 100, 204, 82, 91, 52, 45, 96, 164, 63, 7, 156, 145, 18, 207, 117, 95, 20, 111, 41, 69, 100, 204, 82, 91, 52, 50, 173, 163, 203, 236, 51, 153, 205, 247, 99, 109, 237, 236, 51, 153, 205, 74, 73, 135, 237, 247, 99, 109, 237, 255, 111, 152, 250, 47, 138, 159, 235, 160, 121, 157, 46, 68, 126, 165, 12, 186, 129, 89, 243, 74, 73, 135, 237, 255, 111, 152, 250, 160, 121, 157, 46, 68, 126, 165, 12, 45, 96, 164, 63, 255, 143, 102, 5, 207, 117, 95, 20, 204, 82, 91, 52, 18, 204, 101, 50, 7, 156, 145, 18, 143, 214, 185, 155, 50, 173, 163, 203, 143, 214, 185, 155, 50, 173, 163, 203, 209, 159, 90, 192, 247, 99, 109, 237, 47, 138, 159, 235, 94, 134, 97, 209, 186, 129, 89, 243, 209, 159, 90, 192, 255, 111, 152, 250, 47, 138, 159, 235, 68, 126, 165, 12, 180, 182, 119, 18, 255, 143, 102, 5, 94, 134, 97, 209, 186, 129, 89, 243, 18, 204, 101, 50, 180, 182, 119, 18, 7, 156, 145, 18, 255, 143, 102, 5, 207, 117, 95, 20, 18, 204, 101, 50, 180, 182, 119, 18, 143, 214, 185, 155, 94, 134, 97, 209, 209, 159, 90, 192)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_gajvs")

[sub_resource type="ArrayMesh" id="ArrayMesh_4ho8s"]
_surfaces = [{
"aabb": AABB(-0.931805, -1.04818, -0.898364, 1.87494, 2.09669, 1.79393),
"attribute_data": PackedByteArray(186, 44, 58, 62, 0, 0, 128, 63, 140, 162, 11, 63, 0, 0, 128, 63, 186, 44, 186, 62, 0, 0, 128, 63, 233, 185, 104, 63, 0, 0, 128, 63, 186, 45, 58, 63, 0, 0, 128, 63, 140, 162, 139, 62, 216, 175, 87, 63, 140, 162, 139, 62, 216, 175, 87, 63, 140, 162, 139, 62, 216, 175, 87, 63, 140, 162, 139, 62, 216, 175, 87, 63, 140, 162, 139, 62, 216, 175, 87, 63, 186, 40, 186, 61, 216, 175, 87, 63, 186, 40, 186, 61, 216, 175, 87, 63, 186, 40, 186, 61, 216, 175, 87, 63, 0, 0, 128, 63, 216, 175, 87, 63, 0, 0, 128, 63, 216, 175, 87, 63, 209, 115, 81, 63, 216, 175, 87, 63, 209, 115, 81, 63, 216, 175, 87, 63, 209, 115, 81, 63, 216, 175, 87, 63, 209, 115, 81, 63, 216, 175, 87, 63, 209, 115, 81, 63, 216, 175, 87, 63, 163, 232, 34, 63, 216, 175, 87, 63, 163, 232, 34, 63, 216, 175, 87, 63, 163, 232, 34, 63, 216, 175, 87, 63, 163, 232, 34, 63, 216, 175, 87, 63, 163, 232, 34, 63, 216, 175, 87, 63, 233, 184, 232, 62, 216, 175, 87, 63, 233, 184, 232, 62, 216, 175, 87, 63, 233, 184, 232, 62, 216, 175, 87, 63, 233, 184, 232, 62, 216, 175, 87, 63, 233, 184, 232, 62, 216, 175, 87, 63, 186, 44, 58, 62, 175, 96, 47, 63, 186, 44, 58, 62, 175, 96, 47, 63, 186, 44, 58, 62, 175, 96, 47, 63, 186, 44, 58, 62, 175, 96, 47, 63, 186, 44, 58, 62, 175, 96, 47, 63, 0, 0, 0, 0, 175, 96, 47, 63, 0, 0, 0, 0, 175, 96, 47, 63, 233, 185, 104, 63, 175, 96, 47, 63, 233, 185, 104, 63, 175, 96, 47, 63, 233, 185, 104, 63, 175, 96, 47, 63, 186, 45, 58, 63, 175, 96, 47, 63, 186, 45, 58, 63, 175, 96, 47, 63, 186, 45, 58, 63, 175, 96, 47, 63, 186, 45, 58, 63, 175, 96, 47, 63, 186, 45, 58, 63, 175, 96, 47, 63, 140, 162, 11, 63, 175, 96, 47, 63, 140, 162, 11, 63, 175, 96, 47, 63, 140, 162, 11, 63, 175, 96, 47, 63, 140, 162, 11, 63, 175, 96, 47, 63, 140, 162, 11, 63, 175, 96, 47, 63, 186, 44, 186, 62, 175, 96, 47, 63, 186, 44, 186, 62, 175, 96, 47, 63, 186, 44, 186, 62, 175, 96, 47, 63, 186, 44, 186, 62, 175, 96, 47, 63, 186, 44, 186, 62, 175, 96, 47, 63, 140, 162, 139, 62, 135, 17, 7, 63, 233, 184, 232, 62, 135, 17, 7, 63, 186, 40, 186, 61, 135, 17, 7, 63, 163, 232, 34, 63, 135, 17, 7, 63, 209, 115, 81, 63, 135, 17, 7, 63),
"format": 34359742487,
"index_count": 60,
"index_data": PackedByteArray(0, 0, 5, 0, 10, 0, 7, 0, 2, 0, 27, 0, 3, 0, 13, 0, 15, 0, 4, 0, 16, 0, 23, 0, 1, 0, 20, 0, 25, 0, 9, 0, 29, 0, 54, 0, 11, 0, 6, 0, 30, 0, 17, 0, 14, 0, 38, 0, 24, 0, 18, 0, 43, 0, 26, 0, 21, 0, 45, 0, 8, 0, 52, 0, 32, 0, 12, 0, 34, 0, 36, 0, 19, 0, 39, 0, 44, 0, 22, 0, 41, 0, 49, 0, 28, 0, 47, 0, 53, 0, 31, 0, 50, 0, 55, 0, 35, 0, 33, 0, 57, 0, 42, 0, 37, 0, 59, 0, 48, 0, 40, 0, 58, 0, 51, 0, 46, 0, 56, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray(255, 136, 202, 58, 234, 42, 134, 191, 16, 8, 89, 60, 255, 136, 202, 58, 234, 42, 134, 191, 16, 8, 89, 60, 255, 136, 202, 58, 234, 42, 134, 191, 16, 8, 89, 60, 255, 136, 202, 58, 234, 42, 134, 191, 16, 8, 89, 60, 255, 136, 202, 58, 234, 42, 134, 191, 16, 8, 89, 60, 37, 26, 65, 63, 4, 172, 245, 190, 124, 67, 12, 63, 37, 26, 65, 63, 4, 172, 245, 190, 124, 67, 12, 63, 37, 26, 65, 63, 4, 172, 245, 190, 124, 67, 12, 63, 37, 26, 65, 63, 4, 172, 245, 190, 124, 67, 12, 63, 37, 26, 65, 63, 4, 172, 245, 190, 124, 67, 12, 63, 235, 158, 145, 190, 77, 224, 245, 190, 98, 40, 99, 63, 235, 158, 145, 190, 77, 224, 245, 190, 98, 40, 99, 63, 235, 158, 145, 190, 77, 224, 245, 190, 98, 40, 99, 63, 235, 158, 145, 190, 77, 224, 245, 190, 98, 40, 99, 63, 235, 158, 145, 190, 77, 224, 245, 190, 98, 40, 99, 63, 196, 138, 110, 191, 81, 224, 245, 190, 103, 216, 113, 59, 196, 138, 110, 191, 81, 224, 245, 190, 103, 216, 113, 59, 196, 138, 110, 191, 81, 224, 245, 190, 103, 216, 113, 59, 196, 138, 110, 191, 81, 224, 245, 190, 103, 216, 113, 59, 196, 138, 110, 191, 81, 224, 245, 190, 103, 216, 113, 59, 49, 58, 149, 190, 82, 224, 245, 190, 98, 146, 98, 191, 49, 58, 149, 190, 82, 224, 245, 190, 98, 146, 98, 191, 49, 58, 149, 190, 82, 224, 245, 190, 98, 146, 98, 191, 49, 58, 149, 190, 82, 224, 245, 190, 98, 146, 98, 191, 49, 58, 149, 190, 82, 224, 245, 190, 98, 146, 98, 191, 247, 136, 65, 63, 83, 224, 245, 190, 152, 113, 11, 191, 247, 136, 65, 63, 83, 224, 245, 190, 152, 113, 11, 191, 247, 136, 65, 63, 83, 224, 245, 190, 152, 113, 11, 191, 247, 136, 65, 63, 83, 224, 245, 190, 152, 113, 11, 191, 247, 136, 65, 63, 83, 224, 245, 190, 152, 113, 11, 191, 9, 104, 151, 62, 131, 66, 234, 62, 213, 67, 101, 63, 9, 104, 151, 62, 131, 66, 234, 62, 213, 67, 101, 63, 9, 104, 151, 62, 131, 66, 234, 62, 213, 67, 101, 63, 9, 104, 151, 62, 131, 66, 234, 62, 213, 67, 101, 63, 9, 104, 151, 62, 131, 66, 234, 62, 213, 67, 101, 63, 103, 166, 66, 191, 132, 66, 234, 62, 153, 216, 14, 63, 103, 166, 66, 191, 132, 66, 234, 62, 153, 216, 14, 63, 103, 166, 66, 191, 132, 66, 234, 62, 153, 216, 14, 63, 103, 166, 66, 191, 132, 66, 234, 62, 153, 216, 14, 63, 103, 166, 66, 191, 132, 66, 234, 62, 153, 216, 14, 63, 39, 3, 68, 191, 129, 66, 234, 62, 72, 250, 12, 191, 39, 3, 68, 191, 129, 66, 234, 62, 72, 250, 12, 191, 39, 3, 68, 191, 129, 66, 234, 62, 72, 250, 12, 191, 39, 3, 68, 191, 129, 66, 234, 62, 72, 250, 12, 191, 39, 3, 68, 191, 129, 66, 234, 62, 72, 250, 12, 191, 104, 255, 146, 62, 133, 66, 234, 62, 44, 251, 101, 191, 104, 255, 146, 62, 133, 66, 234, 62, 44, 251, 101, 191, 104, 255, 146, 62, 133, 66, 234, 62, 44, 251, 101, 191, 104, 255, 146, 62, 133, 66, 234, 62, 44, 251, 101, 191, 104, 255, 146, 62, 133, 66, 234, 62, 44, 251, 101, 191, 54, 113, 113, 63, 127, 66, 234, 62, 163, 231, 147, 59, 54, 113, 113, 63, 127, 66, 234, 62, 163, 231, 147, 59, 54, 113, 113, 63, 127, 66, 234, 62, 163, 231, 147, 59, 54, 113, 113, 63, 127, 66, 234, 62, 163, 231, 147, 59, 54, 113, 113, 63, 127, 66, 234, 62, 163, 231, 147, 59, 47, 163, 98, 59, 95, 53, 134, 63, 194, 98, 62, 60, 47, 163, 98, 59, 95, 53, 134, 63, 194, 98, 62, 60, 47, 163, 98, 59, 95, 53, 134, 63, 194, 98, 62, 60, 47, 163, 98, 59, 95, 53, 134, 63, 194, 98, 62, 60, 47, 163, 98, 59, 95, 53, 134, 63, 194, 98, 62, 60, 101, 143, 201, 62, 253, 255, 177, 207, 200, 190, 101, 15, 0, 0, 77, 176, 111, 183, 112, 55, 254, 255, 253, 255, 187, 89, 18, 66, 221, 181, 255, 191, 236, 61, 68, 38, 35, 74, 254, 191, 101, 143, 201, 62, 253, 255, 177, 207, 64, 155, 39, 111, 254, 255, 176, 207, 111, 183, 112, 55, 254, 255, 253, 255, 53, 193, 100, 143, 254, 255, 15, 229, 118, 235, 121, 107, 252, 255, 253, 255, 101, 143, 201, 62, 253, 255, 177, 207, 64, 155, 39, 111, 254, 255, 176, 207, 190, 100, 215, 144, 156, 224, 254, 191, 187, 89, 18, 66, 221, 181, 255, 191, 201, 62, 153, 112, 222, 181, 255, 191, 187, 89, 18, 66, 221, 181, 255, 191, 236, 61, 68, 38, 35, 74, 254, 191, 201, 62, 153, 112, 222, 181, 255, 191, 101, 15, 55, 65, 34, 74, 254, 191, 137, 20, 134, 148, 2, 128, 254, 191, 200, 190, 101, 15, 0, 0, 77, 176, 39, 239, 66, 27, 1, 0, 177, 207, 217, 16, 189, 228, 100, 31, 255, 191, 236, 61, 68, 38, 35, 74, 254, 191, 101, 15, 55, 65, 34, 74, 254, 191, 200, 190, 101, 15, 0, 0, 77, 176, 39, 239, 66, 27, 1, 0, 177, 207, 111, 183, 112, 55, 254, 255, 253, 255, 153, 240, 198, 190, 0, 0, 16, 229, 118, 235, 121, 107, 252, 255, 253, 255, 64, 155, 39, 111, 254, 255, 176, 207, 68, 166, 235, 189, 254, 255, 16, 229, 53, 193, 100, 143, 254, 255, 15, 229, 154, 112, 54, 193, 154, 224, 254, 191, 190, 100, 215, 144, 156, 224, 254, 191, 154, 112, 54, 193, 154, 224, 254, 191, 190, 100, 215, 144, 156, 224, 254, 191, 145, 72, 141, 200, 0, 128, 253, 191, 201, 62, 153, 112, 222, 181, 255, 191, 137, 20, 134, 148, 2, 128, 254, 191, 57, 65, 152, 240, 101, 31, 253, 191, 217, 16, 189, 228, 100, 31, 255, 191, 145, 72, 141, 200, 0, 128, 253, 191, 101, 15, 55, 65, 34, 74, 254, 191, 137, 20, 134, 148, 2, 128, 254, 191, 39, 239, 66, 27, 1, 0, 177, 207, 19, 194, 185, 217, 0, 0, 16, 229, 153, 240, 198, 190, 0, 0, 16, 229, 57, 65, 152, 240, 101, 31, 253, 191, 217, 16, 189, 228, 100, 31, 255, 191, 68, 166, 235, 189, 254, 255, 16, 229, 19, 194, 185, 217, 0, 0, 16, 229, 53, 193, 100, 143, 254, 255, 15, 229, 153, 240, 198, 190, 0, 0, 16, 229, 118, 235, 121, 107, 252, 255, 253, 255, 68, 166, 235, 189, 254, 255, 16, 229, 19, 194, 185, 217, 0, 0, 16, 229, 154, 112, 54, 193, 154, 224, 254, 191, 57, 65, 152, 240, 101, 31, 253, 191, 145, 72, 141, 200, 0, 128, 253, 191)
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_52gis"]
radius = 3.53903

[node name="MagicalCrystal" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
script = ExtResource("1_4k8re")

[node name="GemMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
mesh = SubResource("ArrayMesh_bh2sh")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("2_wctet")

[node name="Outline" type="MeshInstance3D" parent="GemMesh"]
transform = Transform3D(1.05178, 0, 0, 0, 1.05178, 0, 0, 0, 1.05178, 0, 0, 0)
mesh = SubResource("ArrayMesh_4ho8s")
surface_material_override/0 = ExtResource("2_ety16")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.601531, 0, 0, 0, 0.601531, 0, 0, 0, 0.601531, 0, 1.67165, 0)
shape = SubResource("SphereShape3D_52gis")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a7ihc")
pitch_scale = 1.25

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
